# Text-Graphics-Lib

./: .gitignore  CMakeLists.txt  README.md  build.sh  color.hpp  errortypes.hpp  exceptiontypes.hpp  fc_helper.cpp  fc_helper.hpp  fontloadproperties.hpp  main.cpp  sdlfontmanager.cpp  sdlfontmanager.hpp  sdlfontmanager_fontmanagerinitsuccess.cpp  sdlfonttexture.cpp  sdlfonttexture.hpp  sdlfonttexturemanager.cpp  sdlfonttexturemanager.hpp  sdlhelper.cpp  sdlhelper.hpp  sdlmanager.hpp  sdlresourcemanager.hpp  tty_write_functions.cpp  tty_write_functions.hpp  version.hpp.in
ColorLib/: CMakeLists.txt  Color.cpp  Color.h
